examples/test/testpolicy17532.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17532
  namespace: namespace413
spec:
  podSelector:
    matchLabels:
      key44: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value6
      podSelector:
        matchLabels:
          key0: value40
          key34: value41
          key37: value38
